<resources>
    <!--A-->
    <string name="app_name">cpfit_android</string>




    <!--B-->
    <string name="back">Back</string>



    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_change_password">Change password</string>
    <string name="menu_change_picture">Change picture</string>

    <!--C-->
    <string name="cancel">Cancel</string>
    <string name="call">Tel</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_title">it’s good idea to use strong password</string>
    <string name="change_password_old_tint">Old password</string>
    <string name="change_password_new_tint">New password</string>
    <string name="change_password_confirm_tint">Confirm password</string>
    <string name="change_password_confirm">Confirm</string>


    <!--D-->
    <string name="dialog_refresh">Connection Refused</string>
    <string name="dialog_refresh_repeat">กรุณากดปุ่ม "Refresh" เพื่อส่งข้อมูลใหม่อีกครั้ง</string>


    <!-- F -->
    <string name="fill_input">Fill Input</string>
    <string name="forgot">Forgot password</string>
    <string name="forgot_title">Please enter your email to request a password reset</string>
    <string name="forgot_send">Send</string>
    <!-- G -->
    <string name="google_maps_key">AIzaSyAA_yaaQ2v0SV7kPctCvn6R0hJsNQJFRc4</string>

    <!--L-->
    <string name="login">Sign In</string>
    <string name="login_title">Connected to society of  CP Group</string>
    <string name="login_telephone_tint">Telephone</string>
    <string name="login_company_tint">Company</string>
    <string name="login_select_company">Select Company</string>
    <string name="login_email_tint">Email</string>
    <string name="login_email_hint">myemail@domain.com</string>
    <string name="login_password_tint">Password</string>
    <string name="login_password_hint">your email password</string>
    <string name="login_forgot_password_tint">Forgot password?</string>
    <string name="login_signin">Sign in</string>
    <string name="login_signup">Sign up</string>


    <string name="leaderboard_head_company">Member : </string>
    <string name="leaderboard_head_all_company">Company : </string>
    <string name="leaderboard_head_all_member">Top 100 Ranking</string>
    <string name="leaderboard_km_unit">km</string>


    <string name="trophy_head_success">Success Ratings</string>
    <string name="trophy_unit">trophy</string>
    <string name="trophy_event_header">Special Events</string>
    <string name="trophy_distance_header">Distance Trophy</string>


    <!--O-->
    <string name="otp_verify">Verifying your number</string>
    <string name="otp_verify_title">Please enter the validation code \nthat get from sms</string>
    <string name="otp_resend">Resend OTP</string>
    <!-- P -->
    <string name="progress_loading">Loading...</string>
    <string name="personal_send">Send</string>

    <string name="personal_weight">Weight</string>
    <string name="personal_height">Height</string>
    <string name="personal_bmi">BMI:</string>
    <string name="personal_bmi_normal">Normal</string>
    <string name="personal_bmi_overweight">Over Weight</string>
    <string name="personal_bmi_fat">Fat</string>
    <string name="personal_point">Point</string>
    <string name="personal_step">Step</string>
    <string name="personal_km">km</string>
    <string name="personal_title_record">Record</string>
    <string name="personal_title_step">Step</string>
    <string name="personal_title_distance">Distance : km</string>
    <string name="personal_title_my_record">My Record</string>
    <string name="personal_title_company_record">Company Record</string>
    <string name="personal_title_total_record">Total Record</string>
    <string name="personal_step_selected">STEP</string>
    <string name="personal_km_selected">km</string>
    <string name="personal_unit_selected_default">/km</string>
    <string name="personal_select_picture">Select Picture</string>



    <!-- S -->
    <string name="signup">Sign up</string>
    <string name="signup_title">Plese enter your personal info</string>
    <string name="signup_firstname_tint">First Name</string>
    <string name="signup_lastname_tint">Last Name</string>
    <string name="signup_email_tint">Email</string>
    <string name="signup_autofill">Auto fill</string>
    <string name="signup_create_account">Create</string>
    <string name="signup_policy">By signing up, you agree to our \nTerms &amp; Privacy Policy.</string>
    <string name="signup_agree">I Agree</string>
    <string name="signup_weight_tint">Weight</string>
    <string name="signup_height_tint">Height</string>
    <string name="signup_weight_unit">kg</string>
    <string name="signup_height_unit">cm</string>
    <string name="signup_save">Save</string>

    <string name="webview_policy">Agreement</string>
    <string name="webview_error">Cannot open file, Please try again</string>



</resources>
