<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OTPActivity"
    tools:layout_editor_absoluteY="25dp">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

    <TextView
        android:id="@+id/tvSignIn"
        style="@style/TextHead16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/MarginSpace4XL"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextSub12"
        android:textSize="@dimen/FontSizeSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginSpaceS"
        android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="@+id/tvSignIn"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />



    <!-- Email -->

    <TextView
        android:id="@+id/tvTitlePhone"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginSpaceS"
        android:text="@string/login_email_tint"
        app:layout_constraintBottom_toTopOf="@+id/edtPhone"
        app:layout_constraintStart_toStartOf="@+id/tvTitle" />


    <ImageView
        android:id="@+id/imvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/edtPhone"
        app:layout_constraintStart_toStartOf="@+id/tvTitlePhone"
        app:layout_constraintTop_toTopOf="@+id/edtPhone" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/MarginSpace4XL"
        android:layout_marginStart="@dimen/MarginSpace"
        android:layout_marginTop="@dimen/MarginSpace8XL"
        android:hint="@string/login_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <!-- Password -->

    <TextView
        android:id="@+id/tvTitlePassword"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginSpaceS"
        android:text="@string/login_password_tint"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/imvPassword" />

    <ImageView
        android:id="@+id/imvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/MarginSpace"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/edtPassword" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginSpace4XL"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPhone"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone" />


    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginSpaceL"
        android:text="@string/login_forgot_password_tint"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


    <Button
        android:id="@+id/btnSignIn"
        style="@style/TextTitle14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/btn_left"
        android:text="@string/login_sign_in"
        android:paddingRight="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignUp"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>

