<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/White">

    <LinearLayout
        style="@style/BottomSheetMenu"
        android:orientation="horizontal"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_pencil"
            android:layout_gravity="center_vertical"
            android:layout_width="18dp"
            android:layout_height="18dp" />
        <TextView
            android:layout_marginLeft="@dimen/MarginSpace6XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_profile" />
    </LinearLayout>



    <LinearLayout
        style="@style/BottomSheetMenu"
        android:orientation="horizontal"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_phone"
            android:layout_gravity="center_vertical"
            android:layout_width="18dp"
            android:layout_height="18dp" />
        <TextView
            android:layout_marginLeft="@dimen/MarginSpace6XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_history" />
    </LinearLayout>


    <LinearLayout
        style="@style/BottomSheetMenu"
        android:orientation="horizontal"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_email"
            android:layout_gravity="center_vertical"
            android:layout_width="18dp"
            android:layout_height="18dp" />
        <TextView
            android:layout_marginLeft="@dimen/MarginSpace6XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_logout" />
    </LinearLayout>


    <LinearLayout
        style="@style/BottomSheetMenu"
        android:orientation="horizontal"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_lock"
            android:layout_gravity="center_vertical"
            android:layout_width="18dp"
            android:layout_height="18dp" />
        <TextView
            android:layout_marginLeft="@dimen/MarginSpace6XL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_cancel" />
    </LinearLayout>



</LinearLayout>