<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/tran00">




    <RelativeLayout
        android:id="@+id/changePasswordMenu"
        style="@style/BottomSheetMenu"
        android:background="@drawable/border_top_menu"
        android:layout_marginLeft="@dimen/MarginSpace"
        android:layout_marginRight="@dimen/MarginSpace"
        android:gravity="center"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:textColor="@color/blue_theme"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_change_password" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/changePictureMenu"
        style="@style/BottomSheetMenu"
        android:layout_marginLeft="@dimen/MarginSpace"
        android:layout_marginRight="@dimen/MarginSpace"
        android:gravity="center"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:textColor="@color/blue_theme"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_change_picture" />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/cancelMenu"
        style="@style/BottomSheetMenu"
        android:background="@drawable/border_menu"
        android:layout_marginTop="@dimen/MarginSpace"
        android:layout_marginLeft="@dimen/MarginSpace"
        android:layout_marginRight="@dimen/MarginSpace"
        android:layout_marginBottom="@dimen/MarginSpace"
        android:gravity="center"
        android:padding="@dimen/PaddingSpaceXL"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:textColor="@color/blue_theme"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_cancel" />
    </RelativeLayout>



</LinearLayout>