<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <TextView
        android:id="@+id/tvChangePassword"
        style="@style/TextHead16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/MarginSpace4XL"
        android:text="@string/change_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextSub12"
        android:textSize="@dimen/FontSizeSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginSpaceS"
        android:text="@string/change_password_title"
        app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />


    <!--Old Password-->

    <TextView
        android:id="@+id/tvTitleOldPassword"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginSpaceS"
        android:text="@string/change_password_old_tint"
        app:layout_constraintBottom_toTopOf="@+id/edtOldPassword"
        app:layout_constraintStart_toStartOf="@+id/tvTitle" />


    <ImageView
        android:id="@+id/imvOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/edtOldPassword"
        app:layout_constraintStart_toStartOf="@+id/tvTitleOldPassword"
        app:layout_constraintTop_toTopOf="@+id/edtOldPassword" />

    <EditText
        android:id="@+id/edtOldPassword"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/MarginSpace4XL"
        android:layout_marginStart="@dimen/MarginSpace"
        android:layout_marginTop="@dimen/MarginSpace8XL"
        android:hint="@string/change_password_old_tint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imvOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <!-- Password -->

    <TextView
        android:id="@+id/tvTitlePassword"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_new_tint"
        app:layout_constraintStart_toStartOf="@+id/tvTitleOldPassword"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        />

    <ImageView
        android:id="@+id/imvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/MarginSpace"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/edtPassword" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginSpace4XL"
        android:hint="@string/change_password_new_tint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtOldPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtOldPassword" />


    <!-- Password -->

    <TextView
        android:id="@+id/tvTitleConfirmPassword"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_confirm_tint"
        app:layout_constraintStart_toStartOf="@+id/tvTitlePassword"
        app:layout_constraintBottom_toTopOf="@+id/edtConfirmPassword"
        />

    <ImageView
        android:id="@+id/imvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/MarginSpace"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/edtConfirmPassword"
        app:layout_constraintEnd_toStartOf="@+id/edtConfirmPassword"
        app:layout_constraintTop_toTopOf="@+id/edtConfirmPassword" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginSpace4XL"
        android:hint="@string/change_password_confirm_tint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />



    <Button
        android:id="@+id/btnSend"
        style="@style/TextTitle14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginSpace8XL"
        android:background="@drawable/btn_send_right"
        android:text="@string/change_password_confirm"
        android:paddingLeft="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvBack"
        style="@style/TextTint12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginSpaceXL"
        android:layout_marginStart="@dimen/MarginSpaceXL"
        android:text="@string/signup_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>